kubernetes/sky/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sky
  namespace: demo
  labels:
    app.kubernetes.io/name: sky
    app.kubernetes.io/part-of: k8-lab
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: sky

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
